--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 services:
-  
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
-    container_name: zookeeper
+    container_name: zookeeper_new
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
@@ -11,7 +11,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:latest
-    container_name: kafka
+    container_name: kafka_new
     depends_on:
       - zookeeper
     environment:
@@ -19,12 +19,28 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_JMX_PORT: 9999  # Enable JMX
+      KAFKA_JMX_HOSTNAME: kafka
     ports:
       - "9092:9092"
+      - "9999:9999"
+
+  kafka-exporter:
+    image: bitnami/jmx-exporter:latest
+    container_name: kafka-exporter_new
+    ports:
+      - "5556:5556"
+    environment:
+      - SERVICE_PORT=5556
+      - CONFIG_YML=/config.yml
+    volumes:
+      - ./jmx-config/kafka-config.yml:/config.yml
+    depends_on:
+      - kafka
 
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus
+    container_name: prometheus_new
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -32,10 +48,10 @@ services:
 
   grafana:
     image: grafana/grafana:latest
-    container_name: grafana
+    container_name: grafana_new
     depends_on:
       - prometheus
     ports:
       - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=grafananew
