--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -16,3 +16,7 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['host.docker.internal:8083']
+
+  - job_name: 'kafka'
+    static_configs:
+      - targets: ['kafka-exporter:5556']
